[package]
name = "streaming_channelizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
rustfft = "6.1.0"
bessel_fun_sys = { path = "./bessel_fun_sys" }
fftw-sys = "0.8.0"
fftw = "0.8.0"

[dev-dependencies]
rayon = "1.8.0"

[build-dependencies]
cc = "1.0"

[profile.test]
opt-level = 3
